--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="동작구 노량진동 퀵서비스 전문. 노량진 수산시장, 학원가, 노량진역 전지역 20분 내 신속 픽업. 오토바이, 다마스, 라보 맞춤 배차 및 신선 물류 특화 서비스.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://noryangjin.8222quick.com/">
-
+    <link rel="icon" href="https://8222quick.com/img/favicon.png">
     <meta property="og:title" content="노량진동 퀵서비스 | 에이플러스 노량진퀵">
     <meta property="og:description" content="노량진동 전지역 24시 실시간 배차, 수산시장·학원가 중심 20분 내 신속 픽업">
     <meta property="og:url" content="https://noryangjin.8222quick.com/">
@@ -170,4 +170,5 @@
     </footer>
 </div>
 </body>
+
 </html>
